[package]
name = "leptos_declarative"
version = "0.1.0"
edition = "2021"
description = "Declarative components for leptos."
homepage = "https://github.com/jquesada2016/leptos-declarative"
repository = "https://github.com/jquesada2016/leptos-declarative"
documentation = "https://docs.rs/leptos_declarative"
license = "MIT"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
keywords = ["leptos", "web", "framework", "reactive", "isomorphic"]
categories = ["web-programming::frameworks-and-libs", "web-programming::wasm"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.2"