[package]
name = "leptos_declarative"
version = "0.2.1"
edition = "2021"
description = "Declarative components for leptos."
homepage = "https://github.com/jquesada2016/leptos-declarative"
repository = "https://github.com/jquesada2016/leptos-declarative"
documentation = "https://docs.rs/leptos_declarative"
license = "MIT"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
keywords = ["leptos", "web", "framework", "reactive", "isomorphic"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0", features = ["csr"] }
